--- a/x86_64_oop.config
+++ b/x86_64_oop.config
@@ -90,6 +90,7 @@ CONFIG_PACKAGE_iptables-legacy=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
+CONFIG_PACKAGE_iptables-mod-fullconenat=y
 CONFIG_PACKAGE_iptables-mod-tproxy=y
 CONFIG_PACKAGE_kmod-3c59x=y
 CONFIG_PACKAGE_kmod-8139too=y
