--- a/.github/workflows/Build_IMOP_NanoPi_R2S.yml
+++ b/.github/workflows/Build_IMOP_NanoPi_R2S.yml
@@ -2,7 +2,7 @@
 # Description: Build OpenWrt using GitHub Actions
 # Lisence: MIT
 # Author: eSirPlayground
-# Youtube Channel: https://goo.gl/fvkdw
+# Youtube Channel: https://goo.gl/fvkd
 #=================================================
 
 name: Build_armv8_r2s_imop
