--- a/.github/workflows/Build_IMOP_x86_64.yml
+++ b/.github/workflows/Build_IMOP_x86_64.yml
@@ -12,12 +12,12 @@ on:
     types: [published]
 
 
-  #push:
-    #branches: 
-      #- master
+  push:
+    branches: 
+      - master
   
-  schedule:
-    - cron: 0 0 1 */1 *
+  #schedule:
+    #- cron: 0 0 1 */1 *
   
   #watch:
   #  types: [started]
