--- a/.github/workflows/Build_IMOP_NanoPi_R2S.yml
+++ b/.github/workflows/Build_IMOP_NanoPi_R2S.yml
@@ -12,9 +12,9 @@ on:
     types: [published]
 
 
-  push:
-    branches: 
-      - master
+  #push:
+    #branches: 
+      #- master
       
   #schedule:
     #- cron: 0 0 1 */1 *
